<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserDashboard">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/welcome_message"

       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
>
        <Button
            android:id="@+id/btnCategory"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/Categories" />


        <Button
            android:id="@+id/btnProduct"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/Products"
            />
        <Button
            android:id="@+id/btnBasket"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight ="1"
            android:text="@string/Basket" />

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/LogOut" />

    </LinearLayout>




</LinearLayout>