<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:minHeight="48dp"
                android:text="@string/id"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/txtId"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/id"
                android:textStyle="bold|italic" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/username"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/username"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/password"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/password"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/fullname"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtFullname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/fullname"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/email"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/email"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/dateRegistered"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtDateRegistered"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/dateRegistered"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/dateReviewed"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtDateReviewed"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/dateReviewed"
                android:textStyle="bold|italic" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/hobbies"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtHobbies"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/hobbies"
                android:textStyle="bold|italic" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/address"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/address"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/postcode"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtPostcode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/postcode"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/rank"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtRank"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/rank"
                android:textStyle="bold|italic" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="10dp"
            android:text="@string/AddToDB"
            android:textColor="#101010"
            android:backgroundTint="@color/white"
            android:visibility="visible" />

    </LinearLayout>
</LinearLayout>